--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
+
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta charset="utf-8">
   <title>Koia Data Analysis</title>
   <base href="/">
@@ -10,8 +14,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
+
 <body>
-  <img src"./assets/koialogo_textblack.png">
+  <img src"./assets/koialogo_textblack.png"> 
   <koia-root>Loading...</koia-root>
 </body>
+
 </html>
