general clean-up

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,10 @@
 
 </head>
 
-<body>
-  <img src"./assets/koialogo_textblack.png"> 
-  <koia-root>Loading...</koia-root>
+<body>  
+  <koia-root>      
+      Loading...
+  </koia-root>
 </body>
 
 </html>
