--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <meta http-equiv="Expires" content="0">
   <meta charset="utf-8">
   <title>Koia Data Analysis</title>
+  <meta name="description" content="Create graphs online with CSV, Excel or JSON data. Choose from different chart types, pivot tables and relationship graphs. Easy, user-friendly, open- source.">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
