layout and text improvements on landing page

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -66,7 +66,7 @@
     <section class="promo section section-on-bg">
         <div class="container text-center">                
             <p style="font-size:300%;" style="color:#db2a0b;">Privacy-focused graphing</p>
-            <p class="intro">Create graphs and pivot-tables online from CSV, Excel or JSON data.</p>
+            <p class="intro">Create graphs and pivot tables online from CSV, Excel or JSON data.</p>
             <p><a class="btn btn-cta btn-cta-primary" href="/front">Create your graph now</a></p>
             <p><a href="https://youtu.be/6UB_URk02t8" target="_blank">Watch the video</a></p>
 
@@ -80,18 +80,18 @@
             <div class="container">
                 <h2 class="title text-center">What is Koia?</h2>
                 <p class="intro text-center">Koia is an open-source web application for visualizing and analyzing table-like data structures. It is a simple and privacy-focused tool for everyone who just wants to create graphs without having to be worried about registration or subscription fees.</p>
+                
                 <div class="row item">
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Why Koia?</h3>
                         <div class="desc">
                             <p>With Koia, you can effortlessly create meaningful graphs while having <b>total control over your data</b>. The context to the original data is never lost. You are always only a mouseclick apart from seeing the raw data on which the displayed element or value is based.</p>
-                            <p>Besides this, Koia enables the <b>uploading of multiple data sets</b>, so it is possible to create graphics based on different data without opening a lot of tabs in your browser but switching between the data sets in one tab.</p>
+                            <p>Besides this, Koia enables you to <b>switch between multiple data sets</b>, so it is possible to create graphics based on different data without opening a lot of tabs in your browser but switching between the data sets in one tab.</p>
                         </div>                       
                     </div><!--//content-->
                     <figure class="figure offset-lg-1 col-12 col-lg-7">
                         <img class="img-fluid" src="assets/images/why_koia.png" alt="Charts" />
-                    </figure>                    
-
+                    </figure> 
                 </div><!--//item-->
                 
                 <div class="row item">
@@ -113,10 +113,9 @@
 
                 <div class="row item">
                     <div class="content col-12 col-lg-4">
-                        <h2 class="title text-center">How it works</h2>
                         <h3 class="title">Loading data</h3>
                         <div class="desc">
-                            <p>Uploaded data from an individual file are represented by a scene. You can <b>switch between different scenes</b> as you please to create diagrams based on different data.</p>
+                            <p>Data loaded from an individual file are represented by a scene. You can <b>switch between different scenes</b> as you please to create diagrams based on different data.</p>
                             <p>It is also possible to load data through a third party program like <a href="https://retrospective.centeractive.com/" target="_blank">Retrospective Log Analyzer</a>.
                         </div>                        
                     </div><!--//content-->
