changed screen shots on landing page

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -106,7 +106,7 @@
                     </div><!--//content-->
 
                     <figure class="figure col-12 col-lg-7 order-lg-1">
-                        <img class="img-fluid" src="assets/images/trust.png" alt="Charts" />
+                        <img class="img-fluid" src="assets/images/lineChartWithSummary.png" alt="Charts" />
                     </figure>
                 </div><!--//item-->
 
@@ -134,7 +134,7 @@
                         </div>                       
                     </div><!--//content-->
                     <figure class="figure col-12 col-lg-7 order-lg-1">
-                        <img class="img-fluid" src="assets/images/pivot.png" alt="Pivot table" />
+                        <img class="img-fluid" src="assets/images/pivotTable.png" alt="Pivot table" />
                     </figure>
 
                 </div><!--//item-->
