corrected spelling/grammar errors

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -85,8 +85,8 @@
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Why Koia?</h3>
                         <div class="desc">
-                            <p>With Koia, you can effortlessly create meaningful graphs while having <b>total control over your data</b>. The context to the original data is never lost. You are always only a mouseclick apart from seeing the raw data on which the displayed element or value is based.</p>
-                            <p>Besides this, Koia enables you to <b>switch between multiple data sets</b>, so it is possible to create graphics based on different data without opening a lot of tabs in your browser but switching between the data sets in one tab.</p>
+                            <p>With Koia, you can effortlessly create meaningful graphs while having <b>total control over your data</b>. The context to the original data is never lost. You are always only a mouse click away from seeing the raw data on which the displayed element or value is based.</p>
+                            <p>Besides this, Koia enables you to <b>switch between multiple data sets</b>, so it is possible to create graphics based on different data without opening a lot of tabs in your browser by switching between the data sets in one tab.</p>
                         </div>                       
                     </div><!--//content-->
                     <figure class="figure offset-lg-1 col-12 col-lg-7">
@@ -129,7 +129,7 @@
                     <div class="content col-12 col-lg-4 order-lg-12">
                         <h3 class="title">Visualize data</h3>
                         <div class="desc">
-                            <p>The data can be <b>viewed and sorted</b> in a raw data table or it may be refined and displayed as charts, relationship graphs, summary or pivot tables with a few mouseclicks.</p>
+                            <p>The data can be <b>viewed and sorted</b> in a raw data table or it may be refined and displayed as charts, relationship graphs, summary or pivot tables with a few mouse clicks.</p>
                             <p>Koia offers a <b>variety of chart types</b> such as: Pie charts, donut charts, bar charts, line charts, area charts, scatter charts and sunburst charts.</p>
                         </div>                       
                     </div><!--//content-->
