GA tag on intro

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28383891-7"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-28383891-7');
+    </script>
+
     <title>Koia Data Analysis</title>
     <!-- Meta -->
     <meta charset="utf-8">
