correct text alignment on intro page

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -96,8 +96,8 @@
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Why Koia?</h3>
                         <div class="desc">
-                            <p>With Koia, you can effortlessly create meaningful graphs while having <b>total control over your data</b>. The context to the original data is never lost. You are always only a mouse click away from seeing the raw data on which the displayed element or value is based.</p>
-                            <p>Besides this, Koia enables you to <b>switch between multiple data sets</b>, so it is possible to create graphics based on different data without opening a lot of tabs in your browser by switching between the data sets in one tab.</p>
+                            <p class="justify">With Koia, you can effortlessly create meaningful graphs while having <b>total control over your data</b>. The context to the original data is never lost. You are always only a mouse click away from seeing the raw data on which the displayed element or value is based.</p>
+                            <p class="justify">Besides this, Koia enables you to <b>switch between multiple data sets</b>, so it is possible to create graphics based on different data without opening a lot of tabs in your browser by switching between the data sets in one tab.</p>
                         </div>                       
                     </div><!--//content-->
                     <figure class="figure offset-lg-1 col-12 col-lg-7">
@@ -110,9 +110,9 @@
                         <h3 class="title">Trust</h3>
                         <div class="desc">
                             <p><b>Open-source</b></p>
-                            <p>The source code is and will always be publically available and can be inspected, modified and enhanced by anyone. Koia runs on public web servers but can also easily be installed in your trusted environment.</p>
+                            <p class="justify">The source code is and will always be publically available and can be inspected, modified and enhanced by anyone. Koia runs on public web servers but can also easily be installed in your trusted environment.</p>
                             <p><b>Data protection</b></p>
-                            <p>The web application loads static content from a website but your data never flows back to it. It only travels between your browser and the data storage without ever being accesible to any unauthorized third party. You decide whether the data is kept locally or in a private external data storage.</p>
+                            <p class="justify">The web application loads static content from a website but your data never flows back to it. It only travels between your browser and the data storage without ever being accesible to any unauthorized third party. You decide whether the data is kept locally or in a private external data storage.</p>
                         </div>                        
                     </div><!--//content-->
 
@@ -126,8 +126,8 @@
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Loading data</h3>
                         <div class="desc">
-                            <p>Data loaded from an individual file are represented by a scene. You can <b>switch between different scenes</b> as you please to create diagrams based on different data.</p>
-                            <p>It is also possible to load data through a third party program like <a href="https://retrospective.centeractive.com/" target="_blank">Retrospective Log Analyzer</a>.
+                            <p class="justify">Data loaded from an individual file are represented by a scene. You can <b>switch between different scenes</b> as you please to create diagrams based on different data.</p>
+                            <p class="justify">It is also possible to load data through a third party program like <a href="https://retrospective.centeractive.com/" target="_blank">Retrospective Log Analyzer</a>.
                         </div>                        
                     </div><!--//content-->
 
@@ -140,8 +140,8 @@
                     <div class="content col-12 col-lg-4 order-lg-12">
                         <h3 class="title">Visualize data</h3>
                         <div class="desc">
-                            <p>The data can be <b>viewed and sorted</b> in a raw data table or it may be refined and displayed as charts, relationship graphs, summary or pivot tables with a few mouse clicks.</p>
-                            <p>Koia offers a <b>variety of chart types</b> such as: Pie charts, donut charts, bar charts, line charts, area charts, scatter charts and sunburst charts.</p>
+                            <p class="justify">The data can be <b>viewed and sorted</b> in a raw data table or it may be refined and displayed as charts, relationship graphs, summary or pivot tables with a few mouse clicks.</p>
+                            <p class="justify">Koia offers a <b>variety of chart types</b> such as: Pie charts, donut charts, bar charts, line charts, area charts, scatter charts and sunburst charts.</p>
                         </div>                       
                     </div><!--//content-->
                     <figure class="figure col-12 col-lg-7 order-lg-1">
@@ -155,8 +155,8 @@
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Filter and export data</h3>
                         <div class="desc">
-                            <p>Besides simply visualizing data, Koia also features <b>time and value filters</b> to present a closer look at diagrams and the numbers behind them.</p> 
-                            <p>When satisfied with the outcome, you can save the current view or <b>export</b> data to use it elsewhere.</p>
+                            <p class="justify">Besides simply visualizing data, Koia also features <b>time and value filters</b> to present a closer look at diagrams and the numbers behind them.</p> 
+                            <p class="justify">When satisfied with the outcome, you can save the current view or <b>export</b> data to use it elsewhere.</p>
                         </div>                        
                     </div><!--//content-->
 
