enhanced color providers for charts and graphs

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'UA-28383891-7');
   </script>
 
@@ -69,7 +68,8 @@
   <meta http-equiv="Expires" content="0">
   <meta charset="utf-8">
   <title>Koia Data Analysis</title>
-  <meta name="description" content="Create graphs online with CSV, Excel or JSON data. Choose from different chart types, pivot tables and relationship graphs. Easy, user-friendly, open- source.">
+  <meta name="description"
+        content="Create graphs online with CSV, Excel or JSON data. Choose from different chart types, pivot tables and relationship graphs. Easy, user-friendly, open- source.">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
