--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,14 @@
 </script>
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28383891-7"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9WEX4D51V3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-28383891-7');
+  
+    gtag('config', 'G-9WEX4D51V3');
   </script>
 
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
