migrating to ng material v15

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 <body>
   <koia-root>
     <div id="container">
-      <div>
+      <div style="color: white;">
         <div id="loader"></div>
         Loading Koia...
       </div>
