--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -208,7 +208,7 @@
         <section id="cta-section" class="section cta-section text-center home-cta-section">
             <div class="container">
                 <h2 class="title">Ready to visualize your data?</h2>
-                <p class="intro">Create graphs, summaries and pivot tables with a few mousclicks</p>
+                <p class="intro">Create graphs, summaries and pivot tables with a few mouse clicks</p>
                 <p><a class="btn btn-cta btn-cta-primary" href="/front">Start Now</a></p>
             </div>
             <!--//container-->
