fixed typos and made minor library updates

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -170,8 +170,8 @@
                         <div class="desc">
                             <p class="justify">The data can be <b>viewed and sorted</b> in a raw data table or it may be refined and displayed as charts,
                                 relationship graphs, summary or pivot tables with a few mouse clicks.</p>
-                            <p class="justify">Koia offers a <b>variety of chart types</b> such as: Pie charts, donut charts, bar charts, line charts, area
-                                charts, scatter charts and sunburst charts.</p>
+                            <p class="justify">Koia offers a <b>variety of chart types</b> such as: Pie charts, doughnut charts, bar charts, radar charts,
+                                polar area charts, line charts, area charts and scatter charts.</p>
                         </div>
                     </div>
                     <!--//content-->
