now measuring koia.io with the dedicated GA-4 property G-66X1MBQRD9

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -4,13 +4,13 @@
 <head>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9WEX4D51V3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66X1MBQRD9"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-9WEX4D51V3');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-66X1MBQRD9');
     </script>
 
     <title>Koia Data Analysis</title>
