updating angular and libraries

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -6,11 +6,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-66X1MBQRD9"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-  
-      gtag('config', 'G-66X1MBQRD9');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-66X1MBQRD9');
     </script>
 
     <title>Koia Data Analysis</title>
@@ -19,11 +19,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-          content="Create graphs online with CSV, Excel or JSON data. Choose from different chart types, pivot tables and relationship graphs. Easy, user-friendly, open-source.">
+        content="Create graphs online with CSV, Excel or JSON data. Choose from different chart types, pivot tables and relationship graphs. Easy, user-friendly, open-source.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,300italic,300' rel='stylesheet'
-          type='text/css'>
+    <link
+        href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,300italic,300'
+        rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
@@ -55,14 +56,16 @@
             </h1>
             <!--//logo-->
             <nav class="main-nav navbar navbar-right navbar-inverse navbar-expand-md" role="navigation">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"
+                    aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="https://github.com/centeractive/koia" target="_blank">View on Github</a></li>
-                        <li class="nav-item nav-item-cta last"><a class="btn btn-cta btn-cta-secondary" href="/front">Create your graph</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://github.com/centeractive/koia"
+                                target="_blank">View on Github</a></li>
+                        <li class="nav-item nav-item-cta last"><a class="btn btn-cta btn-cta-secondary"
+                                href="/front">Create your graph</a></li>
                     </ul>
                     <!--//nav-->
                 </div>
@@ -103,18 +106,24 @@
         <section id="why" class="section why">
             <div class="container">
                 <h2 class="title text-center">What is Koia?</h2>
-                <p class="intro text-center">Koia is an open-source web application for visualizing and analyzing table-like data structures. It is a simple and
-                    privacy-focused tool for everyone who just wants to create graphs without having to be worried about registration or subscription fees.</p>
+                <p class="intro text-center">Koia is an open-source web application for visualizing and analyzing
+                    table-like data structures. It is a simple and
+                    privacy-focused tool for everyone who just wants to create graphs without having to be worried about
+                    registration or subscription fees.</p>
 
                 <div class="row item">
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Why Koia?</h3>
                         <div class="desc">
-                            <p class="justify">With Koia, you can effortlessly create meaningful graphs while having <b>total control over your data</b>. The
-                                context to the original data is never lost. You are always only a mouse click away from seeing the raw data on which the
+                            <p class="justify">With Koia, you can effortlessly create meaningful graphs while having
+                                <b>total control over your data</b>. The
+                                context to the original data is never lost. You are always only a mouse click away from
+                                seeing the raw data on which the
                                 displayed element or value is based.</p>
-                            <p class="justify">Besides this, Koia enables you to <b>switch between multiple data sets</b>, so it is possible to create graphics
-                                based on different data without opening a lot of tabs in your browser by switching between the data sets in one tab.</p>
+                            <p class="justify">Besides this, Koia enables you to <b>switch between multiple data
+                                    sets</b>, so it is possible to create graphics
+                                based on different data without opening a lot of tabs in your browser by switching
+                                between the data sets in one tab.</p>
                         </div>
                     </div>
                     <!--//content-->
@@ -129,11 +138,15 @@
                         <h3 class="title">Trust</h3>
                         <div class="desc">
                             <p><b>Open-source</b></p>
-                            <p class="justify">The source code is and will always be publically available and can be inspected, modified and enhanced by anyone.
-                                Koia runs on public web servers but can also easily be installed in your trusted environment.</p>
+                            <p class="justify">The source code is and will always be publically available and can be
+                                inspected, modified and enhanced by anyone.
+                                Koia runs on public web servers but can also easily be installed in your trusted
+                                environment.</p>
                             <p><b>Data protection</b></p>
-                            <p class="justify">The web application loads static content from a website but your data never flows back to it. It only travels
-                                between your browser and the data storage without ever being accesible to any unauthorized third party. You decide whether the
+                            <p class="justify">The web application loads static content from a website but your data
+                                never flows back to it. It only travels
+                                between your browser and the data storage without ever being accesible to any
+                                unauthorized third party. You decide whether the
                                 data is kept locally or in a private external data storage.</p>
                         </div>
                     </div>
@@ -150,10 +163,12 @@
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Loading data</h3>
                         <div class="desc">
-                            <p class="justify">Data loaded from an individual file are represented by a scene. You can <b>switch between different scenes</b> as
+                            <p class="justify">Data loaded from an individual file are represented by a scene. You can
+                                <b>switch between different scenes</b> as
                                 you please to create diagrams based on different data.</p>
                             <p class="justify">It is also possible to load data through a third party program like <a
-                                   href="https://retrospective.centeractive.com/" target="_blank">Retrospective Log Analyzer</a>.
+                                    href="https://retrospective.centeractive.com/" target="_blank">Retrospective Log
+                                    Analyzer</a>.
                         </div>
                     </div>
                     <!--//content-->
@@ -168,9 +183,11 @@
                     <div class="content col-12 col-lg-4 order-lg-12">
                         <h3 class="title">Visualize data</h3>
                         <div class="desc">
-                            <p class="justify">The data can be <b>viewed and sorted</b> in a raw data table or it may be refined and displayed as charts,
+                            <p class="justify">The data can be <b>viewed and sorted</b> in a raw data table or it may be
+                                refined and displayed as charts,
                                 relationship graphs, summary or pivot tables with a few mouse clicks.</p>
-                            <p class="justify">Koia offers a <b>variety of chart types</b> such as: Pie charts, doughnut charts, bar charts, radar charts,
+                            <p class="justify">Koia offers a <b>variety of chart types</b> such as: Pie charts, doughnut
+                                charts, bar charts, radar charts,
                                 polar area charts, line charts, area charts and scatter charts.</p>
                         </div>
                     </div>
@@ -187,9 +204,11 @@
                     <div class="content col-12 col-lg-4">
                         <h3 class="title">Filter and export data</h3>
                         <div class="desc">
-                            <p class="justify">Besides simply visualizing data, Koia also features <b>time and value filters</b> to present a closer look at
+                            <p class="justify">Besides simply visualizing data, Koia also features <b>time and value
+                                    filters</b> to present a closer look at
                                 diagrams and the numbers behind them.</p>
-                            <p class="justify">When satisfied with the outcome, you can save the current view or <b>export</b> data to use it elsewhere.</p>
+                            <p class="justify">When satisfied with the outcome, you can save the current view or
+                                <b>export</b> data to use it elsewhere.</p>
                         </div>
                     </div>
                     <!--//content-->
@@ -225,19 +244,22 @@
                 <div class="row">
                     <div class="container col-12 col-lg-11">
                         <figure class="figure">
-                            <a href="https://retrospective.centeractive.com/" target="_blank"><img src="assets/images/retrologo_light.svg" height="50"
-                                     alt="Retrospective Log Analyzer" /></a>
+                            <a href="https://retrospective.centeractive.com/" target="_blank"><img
+                                    src="assets/images/retrologo_light.svg" height="50"
+                                    alt="Retrospective Log Analyzer" /></a>
                             <figcaption class="figure-caption">Compatible with Retrospective Log Analyzer</figcaption>
-                            <small>Koia is <a class="copyright" href="https://github.com/centeractive/koia/blob/master/LICENSE" target="_blank">MIT
-                                    licensed</a>. Copyright (c) 2023 centeractive ag.</small>
+                            <small>Koia is <a class="copyright"
+                                    href="https://github.com/centeractive/koia/blob/master/LICENSE" target="_blank">MIT
+                                    licensed</a>. Copyright (c) 2024 centeractive ag.</small>
                         </figure>
                     </div>
                     <!--//container-->
 
                     <div class="container col-12 col-lg-1">
                         <figure class="figure">
-                            <a href="https://github.com/centeractive/koia" target="_blank"><img class="img-fluid" src="assets/images/GitHub-Mark-Light-32px.png"
-                                     float="right" alt="Koia Github" /></a>
+                            <a href="https://github.com/centeractive/koia" target="_blank"><img class="img-fluid"
+                                    src="assets/images/GitHub-Mark-Light-32px.png" float="right"
+                                    alt="Koia Github" /></a>
                         </figure>
 
                     </div>
@@ -254,7 +276,8 @@
 
 
     <!-- Video Modal -->
-    <div class="modal modal-video" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
+    <div class="modal modal-video" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -264,7 +287,8 @@
                 <div class="modal-body">
                     <div class="video-container embed-responsive embed-responsive-16by9">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/6UB_URk02t8" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                     <!--//video-container-->
                 </div>
