--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -119,7 +119,8 @@
                                 <b>total control over your data</b>. The
                                 context to the original data is never lost. You are always only a mouse click away from
                                 seeing the raw data on which the
-                                displayed element or value is based.</p>
+                                displayed element or value is based.
+                            </p>
                             <p class="justify">Besides this, Koia enables you to <b>switch between multiple data
                                     sets</b>, so it is possible to create graphics
                                 based on different data without opening a lot of tabs in your browser by switching
@@ -165,7 +166,8 @@
                         <div class="desc">
                             <p class="justify">Data loaded from an individual file are represented by a scene. You can
                                 <b>switch between different scenes</b> as
-                                you please to create diagrams based on different data.</p>
+                                you please to create diagrams based on different data.
+                            </p>
                             <p class="justify">It is also possible to load data through a third party program like <a
                                     href="https://retrospective.centeractive.com/" target="_blank">Retrospective Log
                                     Analyzer</a>.
@@ -208,7 +210,8 @@
                                     filters</b> to present a closer look at
                                 diagrams and the numbers behind them.</p>
                             <p class="justify">When satisfied with the outcome, you can save the current view or
-                                <b>export</b> data to use it elsewhere.</p>
+                                <b>export</b> data to use it elsewhere.
+                            </p>
                         </div>
                     </div>
                     <!--//content-->
@@ -250,7 +253,7 @@
                             <figcaption class="figure-caption">Compatible with Retrospective Log Analyzer</figcaption>
                             <small>Koia is <a class="copyright"
                                     href="https://github.com/centeractive/koia/blob/master/LICENSE" target="_blank">MIT
-                                    licensed</a>. Copyright (c) 2024 centeractive ag.</small>
+                                    licensed</a>. Copyright (c) 2025 centeractive ag.</small>
                         </figure>
                     </div>
                     <!--//container-->
