refactoring chart ticks configuration

--- a/src/intro/index.html
+++ b/src/intro/index.html
@@ -231,7 +231,7 @@
             <div class="container">
                 <h2 class="title">Ready to visualize your data?</h2>
                 <p class="intro">Create graphs, summaries and pivot tables with a few mouse clicks</p>
-                <p><a class="btn btn-cta btn-cta-primary" href="/front">Start Now</a></p>
+                <h3><a href="/front">Start Now...</a></h3>
             </div>
             <!--//container-->
         </section>
